# fuel-indexer

./: .dockerignore  .env  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .markdownlintrc  .rustfmt.toml  Cargo.toml  Cross.toml  README.md  config.yaml  docker-compose.yml  escrow-contract-abi.json  explorer_indexer.wasm  fuel-indexer-test-abi.json  fuel-toolchain.toml  hello_indexer.wasm  index.html  logfile  manifest.yaml  run_migrations.sh  skaffold.yaml  test.bash  tomlfmt.toml
benches/: Cargo.toml
benches/benches/: indexer_examples.rs
benches/benches/wasm_examples/: default_indexer.rs  fuel_explorer.rs  mod.rs
benches/src/: lib.rs
database/sqlite/: .env  Cargo.toml  testdb.db
database/sqlite/migrations/: 20220713212919_initial_migration.up.sql  2022090908251_create_asset_registry.down.sql  2022090908251_create_asset_registry.up.sql
database/sqlite/src/: lib.rs
examples/block-explorer/explorer-index/: Cargo.toml  explorer_index.manifest.yaml
examples/block-explorer/explorer-indexer/: Cargo.toml  explorer_indexer.manifest.yaml
examples/counter/web-api-and-fuel-node/: Cargo.toml
examples/greetings-native/greetings-native-indexer/: Cargo.toml  greetings_native_indexer.manifest.yaml
examples/greetings/greetings-data/: Cargo.toml  README.md
examples/simple-handler/: Cargo.toml  config.yaml
examples/simple-handler/config/: config.yaml  manifest.yaml
examples/simple-handler/contracts/: counter.json
examples/simple-handler/src/: lib.rs  main.rs  schema.rs
examples/simple-native/: Cargo.toml  README.md  config.yaml  manifest.yaml
examples/simple-native/simple-counter/: Cargo.toml
examples/simple-native/simple-counter-indexer/: Cargo.toml
examples/simple-native/src/: main.rs
examples/simple-wasm/: Cargo.toml  README.md  manifest.yaml
examples/simple-wasm/contracts/: Cargo.toml  my_struct.json
examples/simple-wasm/simple/: Cargo.toml  wallet.json
examples/simple-wasm/simple-wasm/: Cargo.toml
examples/simple-wasm/src/: lib.rs
fuel-api-server/: Cargo.toml
fuel-api-server/src/: lib.rs  main.rs
fuel-indexer/: Cargo.toml  test.db
fuel-indexer-api-server/: Cargo.toml  query_test.sh
fuel-indexer-api-server/src/: api.rs  lib.rs  main.rs  uses.rs
fuel-indexer-database/: Cargo.toml
fuel-indexer-database/database-types/: Cargo.toml
fuel-indexer-database/database-types/src/: lib.rs
fuel-indexer-database/postgres/: Cargo.toml  README.md  sqlx-data.json
fuel-indexer-database/postgres/migrations/: 20220713212919_initial_migration.down.sql  2022090908251_create_asset_registry.up.sql
fuel-indexer-database/postgres/src/: lib.rs
fuel-indexer-database/sqlite/: Cargo.toml
fuel-indexer-database/sqlite/migrations/: 2022090908251_create_asset_registry.up.sql  20221124123710_rename_wasm_to_module.down.sql  2022112412371_rename_wasm_to_module.up.sql
fuel-indexer-database/sqlite/src/: lib.rs
fuel-indexer-database/src/: lib.rs  queries.rs
fuel-indexer-lib/: Cargo.toml
fuel-indexer-lib/src/: config.rs  defaults.rs  lib.rs  manifest.rs  utils.rs
fuel-indexer-macros/: Cargo.toml
fuel-indexer-macros/src/: .indexer.rs.swp  .schema.rs.swp  default-abi.json  explorer.graphql  handler.rs  indexer.rs  lib.rs  native.rs  parse.rs  schema.rs  wasm.rs
fuel-indexer-macros/test_data/: .fail_empty.rs.swp  .fail_self.rs.swp  contracts-abi.json  fail_args.rs  fail_args.stderr  fail_args2.stderr  fail_badschema.rs  fail_badschema.stderr  fail_empty.rs  fail_empty.stderr  fail_noschema.rs  fail_self.rs  fail_self.stderr  fail_unknown_type.rs  fail_unknown_type.stderr  success.rs  success2.rs
fuel-indexer-plugin/: Cargo.toml
fuel-indexer-plugin/src/: lib.rs
fuel-indexer-schema/: Cargo.toml  README.md
fuel-indexer-schema/src/: base.graphql  db.rs  directives.rs  explorer.graphql  lib.rs  sql_types.rs  utils.rs
fuel-indexer-tests/: Cargo.toml
fuel-indexer-tests/assets/: chain-config.json  counter_indexer.wasm  dashboard_index.wasm  explorer_index.wasm  fuel_indexer.wasm  fuel_indexer.yaml  fuel_indexer_test.graphql  fuel_indexer_test.wasm  fuel_indexer_test.yaml  fuel_indexer_test_old.wasm  fuel_indexer_test_unit.yaml  hello_index.wasm  simple_wasm.wasm  simple_wasm.yaml
fuel-indexer-tests/contracts/: README.md
fuel-indexer-tests/indices/: README.md
fuel-indexer-tests/macro-data/: fail_if_all_attribute_args_not_included.rs  fail_if_all_attribute_args_not_included.stderr  fail_if_attribute_abi_arg_includes_invalid_type.rs  fail_if_attribute_abi_arg_includes_invalid_type.stderr  fail_if_attribute_args_include_self.rs  fail_if_attribute_args_include_self.stderr  fail_if_attribute_args_not_included.stderr  fail_if_attribute_schema_arg_is_invalid.rs  fail_if_attribute_schema_arg_is_invalid.stderr  fail_if_indexer_module_is_empty.rs  fail_if_indexer_module_is_empty.stderr  pass_if_indexer_is_valid_multi_type.rs  pass_if_indexer_is_valid_single_type.rs  simple_wasm.wasm
fuel-indexer-tests/src/: fixtures.rs  lib.rs
fuel-indexer-tests/tests/: database.rs  e2e.rs  executor.rs  graphql.rs  harness.rs  lib.rs  metrics.rs  service.rs
fuel-indexer-tests/trybuild/: fail_if_attribute_abi_arg_includes_invalid_type.rs  fail_if_attribute_abi_arg_includes_invalid_type.stderr  fail_if_attribute_args_not_included.rs  fail_if_attribute_schema_arg_is_invalid.rs  fail_if_attribute_schema_arg_is_invalid.stderr  fail_if_indexer_module_is_empty.rs  pass_if_indexer_is_valid_multi_type.rs  pass_if_indexer_is_valid_single_type.rs
fuel-indexer-types/: Cargo.toml
fuel-indexer-types/src/: abi.rs  graphql.rs  lib.rs  log.rs  tx.rs
fuel-indexer/src/: api.rs  config.rs  database.rs  executor.rs  ffi.rs  lib.rs  manifest.rs  service.rs
fuel-indexer/tests/: test_indexer.rs
handler/: Cargo.toml
handler/src/: lib.rs
indexer-lib/: Cargo.toml
indexer-lib/src/: lib.rs
indexer-samples/indexer-demo/: Cargo.toml
plugins/forc-index/: Cargo.toml  README.md
plugins/forc-index-tests/: Cargo.toml
plugins/forc-index/src/: cli.rs  (+3 more)
plugins/forc-postgres/: Cargo.toml  README.md
plugins/plugin-tests/: Cargo.toml  plugin_test.manifest.yaml
(+1699 files in other folders)
