[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
resolver = "2"
members = [
   "examples/block-explorer/explorer-index",
   "examples/hello-world-native/hello-index-native",
   "examples/hello-world/hello-index",
   "examples/hello-world/hello-world-data",
   "examples/hello-world/hello-world-node",
   "packages/fuel-indexer-api-server",
   "packages/fuel-indexer-database",
   "packages/fuel-indexer-database/database-types",
   "packages/fuel-indexer-database/postgres",
   "packages/fuel-indexer-lib",
   "packages/fuel-indexer-macros",
   "packages/fuel-indexer-metrics",
   "packages/fuel-indexer-plugin",
   "packages/fuel-indexer-schema",
   "packages/fuel-indexer-tests",
   "packages/fuel-indexer-tests/components/fuel-node",
   "packages/fuel-indexer-tests/components/indices/fuel-indexer-test",
   "packages/fuel-indexer-tests/components/indices/simple-wasm/simple-wasm",
   "packages/fuel-indexer-tests/components/web-api",
   "packages/fuel-indexer-types",
   "packages/fuel-indexer",
   "plugins/forc-index",
   "plugins/forc-postgres",
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
