[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
resolver = "2"
members = [
   "examples/block-explorer/explorer-index",
   "examples/hello-world-native/hello-index-native",
   "examples/hello-world/hello-index",
   "examples/hello-world/hello-world-data",
   "examples/hello-world/hello-world-node",
   "packages/fuel-indexer",
   "packages/fuel-indexer-api-server",
   "packages/fuel-indexer-database",
   "packages/fuel-indexer-database/database-types",
   "packages/fuel-indexer-database/postgres",
   "packages/fuel-indexer-lib",
   "packages/fuel-indexer-macros",
   "packages/fuel-indexer-metrics",
   "packages/fuel-indexer-plugin",
   "packages/fuel-indexer-schema",
   "packages/fuel-indexer-tests",
   "packages/fuel-indexer-tests/components/fuel-node",
   "packages/fuel-indexer-tests/components/indices/fuel-indexer-test",
   "packages/fuel-indexer-tests/components/indices/simple-wasm/simple-wasm",
   "packages/fuel-indexer-tests/components/web-api",
   "packages/fuel-indexer-types",
   "plugins/forc-index",
   "plugins/forc-postgres",
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-indexer"
rust-version = "1.67.0"
version = "0.4.0"

[workspace.dependencies]
forc-index = { version = "0.4.0", path = "./plugins/forc-index" }
forc-postgres = { version = "0.4.0", path = "./plugins/forc-postgres" }
fuel-indexer = { version = "0.4.0", path = "./packages/fuel-indexer" }
fuel-indexer-api-server = { version = "0.4.0", path = "./packages/fuel-indexer-api-server" }
fuel-indexer-database = { version = "0.4.0", path = "./packages/fuel-indexer-database" }
fuel-indexer-database-types = { version = "0.4.0", path = "./packages/fuel-indexer-database/database-types" }
fuel-indexer-lib = { version = "0.4.0", path = "./packages/fuel-indexer-lib" }
fuel-indexer-macros = { version = "0.4.0", path = "./packages/fuel-indexer-macros", default-features = false }
fuel-indexer-metrics = { version = "0.4.0", path = "./packages/fuel-indexer-metrics" }
fuel-indexer-plugin = { version = "0.4.0", path = "./packages/fuel-indexer-plugin", default-features = false }
fuel-indexer-postgres = { version = "0.4.0", path = "./packages/fuel-indexer-database/postgres", default-features = false }
fuel-indexer-schema = { version = "0.4.0", path = "./packages/fuel-indexer-schema", default-features = false }
fuel-indexer-types = { version = "0.4.0", path = "./packages/fuel-indexer-types" }
