[workspace]
# Use the new resolver to prevent dev-deps and build-deps from enabling debugging or test features in production.
resolver = "2"

members = [
   # "examples/fuel-explorer/fuel-explorer",
   # "examples/hello-world-native/hello-indexer-native",
   # "examples/hello-world/hello-indexer",
   "examples/hello-world/hello-world-data",
   "examples/hello-world/hello-world-node",
   "packages/fuel-indexer",
   "packages/fuel-indexer-api-server",
   "packages/fuel-indexer-database",
   "packages/fuel-indexer-database/database-types",
   "packages/fuel-indexer-database/postgres",
   "packages/fuel-indexer-graphql",
   "packages/fuel-indexer-lib",
   "packages/fuel-indexer-macros",
   "packages/fuel-indexer-macros/macro-utils",
   "packages/fuel-indexer-metrics",
   "packages/fuel-indexer-plugin",
   "packages/fuel-indexer-schema",
   "packages/fuel-indexer-tests",
   "packages/fuel-indexer-tests/components/fuel-node",
   "packages/fuel-indexer-tests/components/indices/fuel-indexer-test",
   # "packages/fuel-indexer-tests/components/indices/simple-wasm/simple-wasm",
   "packages/fuel-indexer-tests/components/web-api",
   "packages/fuel-indexer-types",
   "packages/fuel-indexer",
   "packages/fuel-indexer-utils",
   "plugins/forc-index",
   "plugins/forc-index-tests",
   "plugins/forc-postgres",
]
default-members = [
   "packages/fuel-indexer",
   "packages/fuel-indexer-api-server",
   "packages/fuel-indexer-database",
   "packages/fuel-indexer-database/database-types",
   "packages/fuel-indexer-database/postgres",
   "packages/fuel-indexer-graphql",
   "packages/fuel-indexer-lib",
   "packages/fuel-indexer-macros",
   "packages/fuel-indexer-metrics",
   "packages/fuel-indexer-plugin",
   "packages/fuel-indexer-schema",
   "packages/fuel-indexer-types",
   "packages/fuel-indexer-utils",
   "plugins/forc-index",
   "plugins/forc-postgres",
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[workspace.package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuel-indexer"
rust-version = "1.69.0"
version = "0.17.1"

[workspace.dependencies]
async-graphql-parser = "5.0"
async-graphql-value = "5.0"
bincode = "1.3"
clap = "3.1"
forc-index = { version = "0.17.1", path = "./plugins/forc-index" }
forc-postgres = { version = "0.17.1", path = "./plugins/forc-postgres" }
fuel-indexer = { version = "0.17.1", path = "./packages/fuel-indexer" }
fuel-indexer-api-server = { version = "0.17.1", path = "./packages/fuel-indexer-api-server" }
fuel-indexer-database = { version = "0.17.1", path = "./packages/fuel-indexer-database" }
fuel-indexer-database-types = { version = "0.17.1", path = "./packages/fuel-indexer-database/database-types" }
fuel-indexer-graphql = { version = "0.17.1", path = "./packages/fuel-indexer-graphql" }
fuel-indexer-lib = { version = "0.17.1", path = "./packages/fuel-indexer-lib", default-features = false }
fuel-indexer-macro-utils = { version = "0.17.1", path = "./packages/fuel-indexer-macros/macro-utils" }
fuel-indexer-macros = { version = "0.17.1", path = "./packages/fuel-indexer-macros", default-features = false }
fuel-indexer-metrics = { version = "0.17.1", path = "./packages/fuel-indexer-metrics" }
fuel-indexer-plugin = { version = "0.17.1", path = "./packages/fuel-indexer-plugin", default-features = false }
fuel-indexer-postgres = { version = "0.17.1", path = "./packages/fuel-indexer-database/postgres" }
fuel-indexer-schema = { version = "0.17.1", path = "./packages/fuel-indexer-schema", default-features = false }
fuel-indexer-types = { version = "0.17.1", path = "./packages/fuel-indexer-types" }
fuel-indexer-utils = { version = "0.17.1", path = "./packages/fuel-indexer-utils" }
fuel-tx = { version = "0.31", default-features = false }
fuel-types = { version = "0.31", default-features = false, features = ["serde"] }
fuel-vm = { version = "0.31", default-features = false }
fuels = { version = "0.43", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "1.0"
tokio = "1.17"
tokio-util = "0.7"
tracing = "0.1"
