[package]
name = "fuel-api-server"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fuel_api_server"
path = "src/lib.rs"

[[bin]]
name = "fuel-api-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.53"
async-std = "1.10.0"
axum = "0.4"
diesel = { version = "1.4", features = ["postgres"] }
fuel-indexer-lib = { path = "../fuel-indexer-lib" }
fuel-indexer-schema = { path = "../fuel-indexer-schema", features = ["db-models"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
