[package]
name = "fuel-indexer-api-server"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "fuel-indexer-api-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-std = "1"
axum = "0.4"
fuel-indexer = { version = "0.1", path = "../fuel-indexer" }
fuel-indexer-lib = { version = "0.1", path = "../fuel-indexer-lib" }
fuel-indexer-schema = { version = "0.1", path = "../fuel-indexer-schema", features = ["db-models"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
