[package]
name = "fuel-indexer-api-server"
version = "0.1.2"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer API Server"

[dependencies]
anyhow = "1.0"
async-std = "1"
axum = { version = "0.5", features = ["multipart"] }
fuel-indexer-database = { version = "0.1", path = "../fuel-indexer-database" }
fuel-indexer-database-types = { version = "0.1", path = "../fuel-indexer-database/database-types" }
fuel-indexer-lib = { version = "0.1", path = "../fuel-indexer-lib" }
fuel-indexer-schema = { version = "0.1", path = "../fuel-indexer-schema", features = ["db-models"] }
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2", "http1", "runtime" ]}
hyper-rustls = { version = "0.23", features = ["http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
