[package]
name = "fuel-indexer-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel-indexer-database-types = { path = "./database-types" }
fuel-indexer-lib = { path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { path = "./postgres" }
fuel-indexer-sqlite = { path = "./sqlite" }
sqlx = { version = "0.6" }
thiserror = { version = "1.0" }
tokio = { version = "1.8", features = ["time"] }
tracing = "0.1"
url = "2.2"
