[package]
name = "fuel-indexer-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel-indexer-database-types = { version = "0.1.0", path = "./database-types" }
fuel-indexer-lib = { version = "0.1", path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { version = "0.1.0", path = "./postgres" }
fuel-indexer-sqlite = { version = "0.1.0", path = "./sqlite" }
sqlx = { version = "0.6" }
thiserror = { version = "1.0" }
tracing = "0.1"
url = "2.2"
