[package]
name = "fuel-indexer-database"
version = "0.1.6"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer Database"

[dependencies]
fuel-indexer-database-types = { version = "0.1", path = "./database-types" }
fuel-indexer-lib = { version = "0.1", path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { version = "0.1", path = "./postgres" }
fuel-indexer-sqlite = { version = "0.1", path = "./sqlite" }
sqlx = { version = "0.6" }
thiserror = { version = "1.0" }
tracing = "0.1"
url = "2.2"
