[package]
name = "fuel-indexer-lib"
description = "A library used throughout various components of the Fuel Indexer serivce."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
tokio = { version = "1.8", features = ["time"] }
tracing = "0.1"
