[package]
name = "fuel-indexer-lib"
description = "A library used throughout various components of the Fuel indexer serivce."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
sha2 = "0.9"
strum = { version = "0.24", default-features = false, features = ["derive"] }
tokio = { version = "1.8", features = ["time", "rt"] }
tracing = "0.1"
