[package]
name = "fuel-indexer-macros"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
development = ["fuels", "fuel-indexer-plugin", "fuels-core"]

[lib]
proc-macro = true

[dependencies]
fuel-indexer = { path = "../fuel-indexer", default-features = false }
fuel-indexer-schema = { path = "../fuel-indexer-schema", default-features = false }
fuel-tx = "0.18"
fuels-core = "0.25"
fuels-types = "0.25"
graphql-parser = "0.3"
lazy_static = "1.4"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.5"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
fuel-indexer-plugin = { path = "../fuel-indexer-plugin" }
fuels = { version = "0.24" }
trybuild = "1.0"

[features]
default = ["fuel-indexer-schema/db-models"]
