[package]
name = "fuel-indexer-plugin"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer Plugin"

[lib]
crate-type = ['rlib']

[dependencies]
fuel-indexer-lib = { version = "0.1.0", path = "../fuel-indexer-lib", default-features = false }
fuel-indexer-schema = { version = "0.1.0", path = "../fuel-indexer-schema", default-features = false }
fuel-indexer-types = { version = "0.1.0", path = "../fuel-indexer-types" }
