[package]
name = "fuel-indexer-schema"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", optional = true, features = ["postgres", "serde_json"] }
diesel_migrations = { version = "1.4.0", features = ["postgres", "sqlite"] }
fuel-types = { version = "0.3", features = ["serde-types"] }
graphql-parser = "0.3"
itertools = { version = "0.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-scale = "0.2"
sha2 = "0.9"
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
insta = { version = "1.8", features = ["yaml"] }

[features]
default = ["diesel"]
db-models = ["itertools", "thiserror"]
