[package]
name = "fuel-indexer-schema"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fuel-indexer-database-types = { path = "../database/database-types" }
fuel-indexer-lib = { path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { path = "../database/postgres", optional = true }
fuel-indexer-sqlite = { path = "../database/sqlite", optional = true }
fuel-tx = { version = "0.18", features = ["serde", "alloc"] }
fuel-types = { version = "0.5", features = ["serde", "alloc"] }
graphql-parser = "0.3"
itertools = { version = "0.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.9"
sqlx = { version = "0.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
thiserror = { version = "1.0", optional = true }
url = "2.2"

[dev-dependencies]
insta = { version = "1.8", features = ["yaml"] }

[features]
default = ["db-models"]
db-models = ["sqlx", "itertools", "thiserror", "fuel-indexer-postgres", "fuel-indexer-sqlite"]
