[package]
name = "fuel-indexer-schema"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-indexer"
description = "Fuel Indexer Schema"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
fuel-indexer-database = { version = "0.1.0", path = "../fuel-indexer-database", optional = true }
fuel-indexer-database-types = { version = "0.1.0", path = "../fuel-indexer-database/database-types" }
fuel-indexer-lib = { version = "0.1.0", path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { version = "0.1.0", path = "../fuel-indexer-database/postgres", optional = true }
fuel-indexer-sqlite = { version = "0.1.0", path = "../fuel-indexer-database/sqlite", optional = true }
fuel-indexer-types = { version = "0.1.0", path = "../fuel-indexer-types" }
fuel-tx = { version = "0.18", features = ["serde", "alloc"] }
fuel-types = { version = "0.5", features = ["serde", "alloc"] }
fuels-core = "0.26"
graphql-parser = "0.3"
itertools = { version = "0.10", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = "0.9"
sqlx = { version = "0.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "sqlite"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
insta = { version = "1.8", features = ["yaml"] }

[features]
default = ["db-models"]
db-models = [
    "sqlx",
    "itertools",
    "thiserror",
    "fuel-indexer-postgres",
    "fuel-indexer-sqlite",
    "fuel-indexer-database",
]

