

[package]
name = "fuel-indexer-tests"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# Disable automatic test target discovery. This allows us to run all the integ tests as a single binary target (lib.rs)
# instead of each integ test file being its own compiled & linked binary which is the default behavior. Linking with
# RocksDB is expensive so we want to minimize the amount of work on ld. This is also how other projects like diesel-rs
# structure their integ tests.
autotests = false
autobenches = false

[lib]
name = "fuel_indexer_tests"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[dependencies]
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }
fuel-indexer = { version = "0.1", path = "./../fuel-indexer" }
fuel-indexer-database = { version = "0.1", path = "./../fuel-indexer-database" }
fuel-indexer-lib = { version = "0.1", path = "./../fuel-indexer-lib" }
fuel-indexer-schema = { version = "0.1", path = "./../fuel-indexer-schema" }
fuel-indexer-types = { version = "0.1", path = "./../fuel-indexer-types" }
fuel-tx = "0.18"
fuel-types = "0.5"
fuels = { version = "0.26", features = ["fuel-core-lib"] }
fuels-abigen-macro = "0.26"
fuels-core = "0.26"
futures = "0.3"
itertools = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde_yaml = "0.8"
sqlx = "0.6"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
wasmer = "2.0"
wasmer-compiler-cranelift = { version = "2.0" }
wasmer-engine-universal = "2.0"

[features]
e2e = []
