[package]
name = "fuel-indexer-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fuel-indexer-lib = { version = "0.1.0", path = "../fuel-indexer-lib" }
fuel-tx = "0.18"
fuel-types = "0.5"
fuels-core = "0.26"
serde = { version = "1.0", default-features = false, features = ["derive"] }