[package]
name = "fuel-indexer-types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fuel-indexer-lib = { version = "0.1.0", path = "../fuel-indexer-lib" }
fuel-tx = { version = "0.18", features = ["serde"] }
fuel-types = "0.5"
fuels-core = "0.26"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }