[package]
name = "fuel-indexer"
version = "0.0.0"
edition = "2021"
license = "BUSL-1.1"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.10.0"
async-trait = "0.1"
axum = { version = "0.4", features = ["multipart"] }
bincode = "1.3.3"
cfg-if = "1.0"
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
fuel-core = { version = "0.6.4" }
fuel-gql-client = { version = "0.6.4" }
fuel-indexer-database-types = { path = "../database/database-types" }
fuel-indexer-lib = { path = "../fuel-indexer-lib" }
fuel-indexer-postgres = { path = "../database/postgres" }
fuel-indexer-schema = { path = "../fuel-indexer-schema", features = ["db-models"] }
fuel-indexer-sqlite = { path = "../database/sqlite" }
fuel-tx = "0.9"
fuel-types = "0.3"
fuel-vm = { version = "0.8" }
fuels-core = { version = "0.15" }
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http2", "http1", "runtime" ]}
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
sqlx = "0.6"
thiserror = "1.0"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
wasmer = "2.0"
wasmer-compiler-cranelift = { version = "2.0" }
wasmer-engine-universal = "2.0"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
fuel-core = { version = "0.6.4", features = ["test-helpers"] }
fuel-crypto = "0.5"
fuel-gql-client = { version = "0.6.4", features = ["test-helpers"] }
fuel-storage = { version = "0.1" }
fuel-types = "0.3"
fuels = "0.15"
fuels-abigen-macro = { version = "0.15" }
itertools = { version = "0.10" }
rand = "0.8"
serde_yaml = "0.8.19"

[features]
default = []
