[package]
name = "fuel-indexer-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-process = "1.3"
async-std = "1.10.0"
axum = "0.4"
diesel = { version = "1.4", features = ["postgres"] }
fuel-indexer-schema = { path = "../schema", features = ["db-models"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
thiserror = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
