[package]
name = "fuel-indexer-lib"
description = "A library used throughout various components of the Fuel Indexer serivce."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tracing = "0.1"
