[package]
name = "fuel-indexer-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuel-indexer-database-types = { path = "../database-types" }
fuel-indexer-lib = { path = "../../fuel-indexer-lib" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline", "time", "json"] }
