[package]
name = "simple-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
name = "simple_handler"
path = "src/lib.rs"


[[bin]]
name = "simple_handler"
path = "src/main.rs"

[dependencies]
fuel-indexer = { path = "../../lib", default-features = false }
fuel-indexer-api-server = { path = "../../api_server" }
fuels-abigen-macro = "0.13"
fuel-indexer-schema = { path = "../../schema" }
fuel-tx = "0.9"
fuels = "0.13"
fuels-core = "0.13"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
graphql-parser = "0.3"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
async-process = "1.3"
async-std = "1.10.0"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
trybuild = "1.0"
