[package]
name = "simple-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-process = "1.3"
async-std = "1.10.0"
fuel-core = { version = "0.6" }
fuel-indexer = { path = "../../lib", default-features = false }
fuel-indexer-api-server = { path = "../../api_server" }
fuel-indexer-schema = { path = "../../schema" }
fuel-wasm-executor = { path = "../../indexer" }
fuels-abigen-macro = "0.13"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8.19"
structopt = "0.3"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
